@@ -125,7 +125,7 @@ for s in "$macro_dir/libtool.m4"
 do
   if $SED -n '/case \$cc_basename in/,/esac/ {
 	      /^[ 	]*[a-zA-Z][a-zA-Z0-9+]*[^*][ 	]*)/p
-  	      }'  $s 2>&1 | $EGREP .; then
+	      }'  $s 2>&1 | $EGREP .; then
     echo "\$cc_basename matches should include a trailing \`*' in $s."
     status=$EXIT_FAILURE
   fi
